# cse314-project-Farley-Doyle

./: GenresOfPublisher.md  README  SumReviews.md  main.py  notebook.ipynb  presentation.ipynb  pyproject.toml
my-project/: main.py  mkdocs.yml  presentation.ipynb  pyproject.toml
my-project/docs/: CleanGames.ipynb  Contributing Guide.ipynb  Feature Documentation.ipynb  GamesFromPublisher.ipynb  GamesInGenre.ipynb  GenreOfPublisher.ipynb  GettingStarted.ipynb  Installation.ipynb  PlaytimeByGenre.ipynb  PublisherGraph.ipynb  ReceptionByGenre.ipynb  SumReviews.ipynb  Top100.ipynb  index.md
