[tool.poetry]
name = "cse314-project-farley-doyle"
version = "0.1.0"
description = ""
authors = ["PatrickFDoyle <46692041+PatrickFDoyle@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "cse314_project_farley_doyle"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
